# airflow-provider-peliqan

./: .gitignore  README.md  pyproject.toml
peliqan_provider/: __init__.py
peliqan_provider/example_dags/: peliqan.py
peliqan_provider/hooks/: peliqan.py
peliqan_provider/operators/: peliqan.py
peliqan_provider/sensors/: peliqan.py
tests/hooks/: test_peliqan.py
tests/operators/: test_peliqan.py
tests/sensors/: test_peliqan.py
